# avito_tasks

./: README.md  docker-compose.yml  pyproject.toml
src/: exception.py  main.py  service.py  shortener.py
src/database/: crud.py  db.py  models.py
tests/: conftest.py  test.service.py
